Refatorando o backend, aplicando código e arquitetura limpa
