# src/routes/user.route.js
@@ -1,10 +1,18 @@
-import { Router } from "express"
-import userControler from "../controllers/user.controller.js";
-import {validId, validUser}  from "../middlewares/global.middlewares.js";
-const router = Router();
+import userController from "../controllers/user.controller.js";
+import authMiddleware from "../middlewares/auth.middleware.js";
+import { validId } from "../middlewares/global.middleware.js";
 
-router.post("/", userControler.create);
-router.get("/", userControler.findAll);
-router.get("/:id", validId, validUser, userControler.findById);
-router.patch("/:id", validId, validUser, userControler.update);
-export default router;
+import { Router } from "express";
+
+const userRouter = Router();
+
+userRouter.post("/create", userController.createUserController);
+
+userRouter.use(authMiddleware);
+userRouter.get("/", userController.findAllUserController);
+
+userRouter.use(validId);
+userRouter.get("/findById/:id?", userController.findUserByIdController);
+userRouter.patch("/update/:id", userController.updateUserController);
+
+export default userRouter;
